--- a/templates/type/callback.mustache
+++ b/templates/type/callback.mustache
@@ -25,7 +25,7 @@ public:
 class {{name}}ClassWrapper : public {{{fullName}}}{};
 
 {{{user_data.commentCppStyle}}}
-UCLASS()
+UCLASS(BlueprintType)
 class AGORAPLUGIN_API {{user_data.bpNodeName}} : public UObject, public {{name}}ClassWrapper {
   GENERATED_BODY()
 public:
