--- a/templates/type/file_content.mustache
+++ b/templates/type/file_content.mustache
@@ -17,6 +17,8 @@
 #include "{{&user_data.bpFileName}}.generated.h"
 
 using namespace agora;
+using namespace agora::rtc;
+using namespace agora::media;
 using namespace agora::rtc::ue;
 
 {{#nodes}}
