--- a/templates/bpplugin/bp_clazz_impl.mustache
+++ b/templates/bpplugin/bp_clazz_impl.mustache
@@ -10,9 +10,7 @@
 {{{user_data.bpContextParamsFree_CppFromBP}}}
 
       {{#user_data.hasReturnVal}}
-      // TBD(WinterPu)
-      // need to convert from cpp to BP
-      return ret;
+{{{user_data.bpContextReturnVal}}}
       {{/user_data.hasReturnVal}}
   }
   
