bugfix: put delegate declaration in class to reduce redundant errors && remove pointer for WeakObjPtr

--- a/templates/bpplugin/bp_callback_impl.mustache
+++ b/templates/bpplugin/bp_callback_impl.mustache
@@ -33,7 +33,7 @@ void {{{user_data.bpNodeName}}}::RemoveAllBlueprintCallbackExecutors(){
 
 {{{user_data.bpContextParamsDecl_BPFromCpp}}}
 
-        TWeakObjectPtr<{{{parent.user_data.bpNodeName}}}*> SelfWeakPtr(this);
+        TWeakObjectPtr<{{{parent.user_data.bpNodeName}}}> SelfWeakPtr(this);
         if(!SelfWeakPtr.IsValid())
             return;
             
