--- a/templates/type/file_content.mustache
+++ b/templates/type/file_content.mustache
@@ -5,6 +5,11 @@
 #include "CoreMinimal.h"
 //#include "AgoraPluginInterface.h"
 //#include "AgoraHeaderBase.h"
+
+// TBD(WinterPu)
+// Need to be removed for some files.
+#include "AgoraUERtcEngine.h"
+
 #include "AgoraBPuDataTypesBase.h"
 #include "UtilityAgoraBPuLogger.h"
 #include "UtilityUABTEnumConvertMacro.h"
