feat: tmp solution for UCLASS parse

--- a/templates/bpplugin/bp_clazz_impl.mustache
+++ b/templates/bpplugin/bp_clazz_impl.mustache
@@ -3,7 +3,7 @@
   {
       {{#user_data.hasReturnVal}}
       // Need to be optimized
-      {{{user_data.bpContextReturnValBegin}}}
+{{{user_data.bpContextReturnValBegin}}}
       {{/user_data.hasReturnVal}}
 
 {{{user_data.macro_scope_start}}}
@@ -20,6 +20,7 @@
       {{{user_data.bpNativePtr}}}->{{name}}({{{user_data.bpContextParamsUsage_CppFromBP}}});
       {{/user_data.hasReturnVal}}
 
+// Free Data if neeeded
 {{{user_data.bpContextParamsFree_CppFromBP}}}
 
       {{#user_data.hasReturnVal}}
@@ -30,7 +31,7 @@
 
       {{#user_data.hasReturnVal}}
       // Need to be optimized
-      {{{user_data.bpContextReturnValEnd}}}
+{{{user_data.bpContextReturnValEnd}}}
       {{/user_data.hasReturnVal}}
   }
   
