--- a/templates/bpplugin/bp_callback_impl.mustache
+++ b/templates/bpplugin/bp_callback_impl.mustache
@@ -22,7 +22,8 @@ void {{{user_data.bpNodeName}}}::RemoveAllBlueprintCallbackExecutors(){
 
 
 {{#methods}}
-    {{#return_type}}{{{source}}}{{/return_type}} {{parent.user_data.bpNodeName}}::{{name}} ({{#parameters}}{{{type.clang_qualtype}}} {{name}}{{{user_data.defaultValueComment}}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}})
+{{{user_data.macro_scope_start}}}
+    {{#return_type}}{{{source}}}{{/return_type}} {{parent.user_data.bpNodeName}}::{{name}} ({{#parameters}}{{{type.source}}} {{name}}{{{user_data.defaultValueComment}}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}})
     {
 {{#user_data.bpCallbackIsNoVoidReturnVal}}
 
@@ -56,6 +57,7 @@ void {{{user_data.bpNodeName}}}::RemoveAllBlueprintCallbackExecutors(){
 {{/user_data.bpCallbackIsNoVoidReturnVal}}
 
     }
+{{{user_data.macro_scope_end}}}
 {{/methods}}
 
 
