bugfix: fix Android Compilation Error
1. some struct has macro scope but USTRUCT cannot be inside the macro scope
2. macro sope problem: in USTRUCT member EUABT_TYPE type = UABT::WrapWithUE(native_enum); use special rule for default value
3. struct default val: int64 a = NULL; change NULL to 0
4. AsyncTask add include files

--- a/templates/type/file_content.mustache
+++ b/templates/type/file_content.mustache
@@ -15,6 +15,9 @@
 #include "UtilityUABTEnumConvertMacro.h"
 #include "UtilityUABTTypeHelper.h"
 
+// for AsyncTask
+#include "Async/Async.h"
+
 {{#user_data.bpIncludeFiles}}
 {{{.}}}
 {{/user_data.bpIncludeFiles}}
